fix tribe events p spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -354,7 +354,8 @@ h6 {
     }
 }
 
-p {
+p,
+.site-main #tribe-events .tribe-events-content p {
     margin: 0 0 1.75em;
 }
 
